--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <header>
         <div class="top_header">
             <div class="container">
-                <a href="#" class="logo"> <img src="img/logo.png" alt=""></a>
+                <a href="#" class="logo"> <img src="img/" alt=""></a>
 
                 <form action="" class="search_box">
 
@@ -456,4 +456,5 @@
       <script src="JS/items_home.js"></script>
       <script src="JS/main.js"></script>
 </body>
+
 </html>
