--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <header>
         <div class="top_header">
             <div class="container">
-                <a href="#" class="logo"> <img src="img/" alt=""></a>
+                <a href="#" class="logo"> <img src="" alt=""></a>
 
                 <form action="" class="search_box">
 
@@ -458,3 +458,4 @@
 </body>
 
 </html>
+
