--- a/checkout.html
+++ b/checkout.html
@@ -48,7 +48,7 @@
     <header>
         <div class="top_header">
             <div class="container">
-                <a href="https://moooatya.github.io/store-main11/" class="logo"> <img src="img/logo.png" alt=""></a>
+                <a href="https://moooatya.github.io/store-main11/" class="logo"> <img src="" alt=""></a>
 
                 <form action="" class="search_box">
 
@@ -356,6 +356,7 @@
 </body>
 
 </html>
+
 
 
 
