--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
                     <div class="swiper-slide">
                         <a href="#"><img src="img/banner_home2.png" alt=""></a>
                     </div>
-
+                    <div class="swiper-slide">
+                        <a href="#"><img src="img/banner_home4.png" alt=""></a>
+                    </div>
                     
                 </div>
                 <div class="swiper-pagination"></div>
@@ -458,4 +460,5 @@
 </body>
 
 </html>
+
 
