--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="login_signup btns">
                     <a href="#" class="btn">Login  <i class="fa-solid fa-right-to-bracket"></i></a>
 
-                    <a href="Unified-Sign-up.html" class="btn">Sign UP <i class="fa-solid fa-user-plus"></i></a>
+                    <a href="Unified-Sign-up.html" class="btn">Login & Sign UP <i class="fa-solid fa-user-plus"></i></a>
                 </div>
 
             </div>
@@ -460,5 +460,6 @@
 </body>
 
 </html>
+
 
 
