--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </nav>
 
                 <div class="login_signup btns">
-                    <a href="#" class="btn">Login  <i class="fa-solid fa-right-to-bracket"></i></a>
+                    <a href="#" class="btn"><i class="fa-solid fa-right-to-bracket"></i></a>
 
                     <a href="Unified-Sign-up.html" class="btn">Login & Sign UP <i class="fa-solid fa-user-plus"></i></a>
                 </div>
@@ -460,6 +460,7 @@
 </body>
 
 </html>
+
 
 
 
